# aocli

./: .gitignore  Cargo.toml
src/: config.rs  core.rs  lib.rs
src/api/: client.rs  error.rs  mod.rs  models.rs
src/cli/: app.rs  error.rs
src/project/: mod.rs
